--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Poetry Before I Disappear
-description: anonymous poems about love, fear, inheritance, and the things we almost say
-author: a name I don't use in real life
+title: "Poetry Before I Disappear"
+description: "Anonymous poems about love, fear, inheritance, and the things we almost say."
+author: "Shannon E. Scott"
+theme: minima
